fixed css class right added align attribute

--- a/blog/styles/main.css
+++ b/blog/styles/main.css
@@ -60,7 +60,7 @@ div {
 
 .right {
     float: right;
-    padding: 0 10px 0 5px;
+    padding: 10px 10px 0 5px;
 }
 
 </style>
